# travellermap

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  PORT_API_COMPAT.md  PORT_PLAN.md  STYLE_THEMES_PLAN.md  WORLD_DETAIL_PLAN.md  build.sh  cloudbuild.yaml  deploy.env.example  deploy.sh
.github/workflows/: ci.yml
crates/: README.md
crates/backend/: Cargo.toml
crates/backend/src/: compat.rs  compat_suite.rs  main.rs  route.rs  search.rs  svg_canvas.rs  system_gen.rs  tile.rs
crates/backend/tests/refs/: .gitattributes  credits_sm_1910.json  data_world_regina.json  jumpworlds_sm_1910_j2.json  milieux.json  msec_sm.msec  route_sm_regina_inthe.json  search_regina.json  sec_sm_subsectorA.sec  sec_sm_subsectorA.tab  sec_sm_subsectorA_legacy.sec  universe_m1105.json
crates/core/: Cargo.toml
crates/core/src/: astrometrics.rs  dto.rs  lib.rs  metadata.rs  msec_writer.rs  parse.rs  route.rs  searchlang.rs  sector_writer.rs  spline.rs  world_util.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/assets/: site.webmanifest
crates/frontend/src/: canvas.rs  globe.rs  glyph.rs  main.rs  render.rs  route_print.rs  world_panel.rs  world_print.rs
crates/frontend/src/render/: borders.rs  common.rs  grid.rs  hud.rs  labels.rs  mod.rs  overlays.rs  range.rs  routes.rs  stars.rs  status.rs  theme.rs  worlds.rs
crates/render/: Cargo.toml
crates/render/src/: canvas.rs  glyph.rs  lib.rs
crates/render/src/render/: borders.rs  common.rs  grid.rs  hud.rs  mod.rs  routes.rs  stars.rs  status.rs  theme.rs  worlds.rs
loadtest/: gen_targets.py  targets.txt
scripts/: README.md  build.sh  deploy.env.example  deploy.sh  purge-cdn.sh
