[package]
name = "tmap-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native streaming backend for Traveller Map — serves sector/metadata, no image rendering."

[dependencies]
tmap-core.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
