[package]
name = "tmap-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native streaming backend for Traveller Map — serves sector/metadata, no image rendering."

[features]
# Non-reference, dev-only feature: a /api/system endpoint that renders a
# generated solar-system PNG via the `worldgen` crate. OFF by default — never
# committed enabled, and the shipped backend stays worldgen-free. Build/run
# locally with `--features callisto`.
callisto = ["dep:worldgen"]

[dependencies]
tmap-core.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
# `default-features = false` is required (the default profile pulls Leptos/WASM,
# none of which the library API needs). See worldgen/docs/library-integration.md.
worldgen = { path = "../../../worldgen", default-features = false, optional = true }
