[package]
name = "tmap-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native streaming backend for Traveller Map — serves sector/metadata, no image rendering."

[dependencies]
tmap-core.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "fs"] }

[dev-dependencies]
# Drive the router in-process for the public-API compatibility suite
# (`compat_suite`): `tower`'s `oneshot` + `http-body-util`'s body collection.
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
# Live-parity mode: fetch the same request from the reference travellermap.com and
# diff. Must use native-tls, NOT rustls: the reference host is an old Windows/IIS/
# Schannel stack that RSTs rustls's TLS handshake (it rejects TLS 1.3 outright and
# rustls's 1.2 ClientHello too); curl/SecureTransport and OpenSSL negotiate TLS 1.2
# and succeed. `native-tls-vendored` → SecureTransport on macOS, bundled OpenSSL on
# Linux, so it builds everywhere without a system OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["native-tls-vendored"] }
