[package]
name = "tmap-frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Leptos/WASM client that renders the Traveller map in the browser."

[dependencies]
tmap-core.workspace = true
serde.workspace = true
leptos = { version = "0.8.19", features = ["csr"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.100", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "WheelEvent", "UiEvent", "Event", "Window", "EventTarget", "Element", "RequestCache", "Performance", "Path2d", "Navigator", "Clipboard", "Blob", "BlobPropertyBag", "Url"] }
wasm-bindgen = "0.2.123"
gloo-net = { version = "0.7.0", default-features = false, features = ["http", "json"] }
js-sys = "0.3.100"
