[package]
name = "tmap-frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Leptos/WASM client that renders the Traveller map in the browser."

[features]
# Non-reference, dev-only: double-click a system → solar-system image popup. The
# image comes from the external worldgen service (travellermap has no worldgen
# dependency); this marker feature — no extra deps — gates the dblclick handler +
# modal so a default build never has them and never calls the external service.
# OFF by default; run with `trunk serve --features callisto`.
# Pulls in the GIF encoder used to share the spinning globe to Discord (client-side
# render → animated GIF); kept out of the default build via optional deps.
callisto = ["dep:gif", "dep:color_quant"]

[dependencies]
tmap-core.workspace = true
tmap-render.workspace = true
serde.workspace = true
leptos = { version = "0.8.19", features = ["csr"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.100", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "WheelEvent", "UiEvent", "Event", "Window", "Document", "HtmlElement", "HtmlAnchorElement", "EventTarget", "Element", "RequestCache", "Performance", "Path2d", "Navigator", "Clipboard", "Blob", "BlobPropertyBag", "Url", "DomRect", "KeyboardEvent", "TouchEvent", "TouchList", "Touch", "VisualViewport", "History", "Location", "UrlSearchParams", "MediaQueryList", "FormData", "HtmlImageElement", "Storage", "WebGlRenderingContext", "WebGlProgram", "WebGlShader", "WebGlTexture", "WebGlUniformLocation", "WebGlBuffer"] }
wasm-bindgen = "0.2.123"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.7.0", default-features = false, features = ["http", "json"] }
js-sys = "0.3.100"
# Globe→Discord GIF sharing (callisto only); pure-Rust, wasm-friendly.
gif = { version = "0.13", optional = true }
color_quant = { version = "1.1", optional = true }
