[package]
name = "tmap-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web-free map-rendering passes (the ported RenderContext/Stylesheet) drawn through trait Canvas — shared by the WASM frontend (Canvas2d) and the native backend (SVG)."

[dependencies]
tmap-core.workspace = true
# Cross-target monotonic clock for the per-pass profiling timer: std::time on
# native, performance.now on wasm. Keeps this crate web-sys-free while the
# frontend's perf HUD still gets real timings.
web-time = "1.1"
